[tool.black]
line-length = 78
[tool.poetry]
name = "fish_text_ru"
version = "2.0.1"
description = "Simple fish-text.ru python wrapper"
readme = "README.md"
keywords = ["fish text", "autotext"]
homepage = "https://github.com/kiriharu/fish_text_ru"
repository = "https://github.com/kiriharu/fish_text_ru"
authors = ["kiriharu <kiriharu@yandex.ru>"]
license = "MIT"
packages = [
    { include = "fishtext" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Natural Language :: Russian",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"


[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
